# wkcp

./: .gitignore  .gvimrc-otl-white  .lvimrc  .python-version  .vimoutlinerrc  Dockerfile  Makefile  README.md  add2clip.sh  clip2otl.sh  convert-jpg.sh  docker-run-wkcp.py  docker-run-wkcp.sh  elinksdump.sh  last-otls.sh  otl2html.sh  otl2img.sh  otllink.sh  pdf2otl.sh  pdf2wiki.sh  pyproject.toml  tags  txt2otl.sh  txt2wiki.sh  url2otl.sh  url2wiki.sh  version.py  vim-register-imgpath-paste.sh  w3mdump.sh
cli/: wkcp.py
console/: venv-wkcp.sh
cpatt/: Makefile  pyproject.toml
cpatt/modules/: image.py
lint/: ale-exe-flake8.sh
modules/: copywiki.py  deletewiki.py  download.py  exceptions.py  extractembedded.py  image.py  text.py  utils.py
tests/: 251226-the-state-of-python-2025-trends-and-survey-insights--the-py-charm-blog.md  test_download.py  test_image.py
ubuntu2404lts/: url2otl.sh  url2pdf.sh  url2wiki.sh
vim/: open-image-view.sh  register-imgpath-paste.sh
wkcp/: .gitignore  pyproject.toml
wkcp/helpers/: wkcp.sh
wkcp/modules/: image.py
