[tool.poetry]
package-mode = true
version = "0"

[tool.poetry.dependencies]
python = "^3.9"
copykitten = "*"
pillow = "*"
aiohttp = "*"

[tool.poetry.group.devel]
optional = true

[tool.poetry.group.devel.dependencies]
build = "*"
ipdb = "*"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wkcp"
dynamic = ["version"]
dependencies = [
	"copykitten",
	"pillow",
	"aiohttp"
]
authors = [
	{ name = "Daniel Vrcic", email = "daniel.vrcic@gmail.com" }
]
description = """
		Helper tool to manage Markdown and Vimwiki attachment
		image and file links to exchange them between wiki files
		using clipboard
"""
classifiers = [
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: POSIX",
	"Programming Language :: Python :: 3.9",
]

[tool.setuptools]
packages = [
    'wkcp',
]
include-package-data = true

[tool.setuptools.package-dir]
wkcp = "modules/"

[tool.setuptools.data-files]
"" = ["pyproject.toml", "poetry.lock"]
"bin" = [
    "bin/wkcp",
]
"helpers" = [
	"helpers/wkcp.sh"
]

[tool.setuptools.dynamic]
version = { attr = "version.vernum" }
